--- a/config/reset.css
+++ b/config/reset.css
@@ -74,3 +74,7 @@ table {
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+input[type="date"]::-webkit-clear-button {
+  display: none;
+}
